--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,6 @@
         "phpunit/phpunit" : "=3.7.28"
     },
     "autoload": {
-        "psr-0": { "codersquad\\": [ "vendor/", "src/"] }
+        "psr-0": { "Codersquad\\": [ "vendor/", "src/"] }
     }
 }
