added test suite files

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Codersquad\\Pestophp\\": [ "src", "tests" ]
+            "Codersquad\\Pestophp\\": [ "src" ],
+            "Codersquad\\Tests\\": [ "tests" ]
         }
     }
 }
