--- a/phpci.yml
+++ b/phpci.yml
@@ -18,6 +18,7 @@ test:
         allow_failures: true
     php_code_sniffer:
         standard: "PSR2"
+        allow_failures: true
     php_cpd:
         allow_failures: true
     php_docblock_checker:
