--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ language: php
 php:
   - 5.5
 
-script: phpunit --configuration phpunit.xml.dist
+script:
+  - composer install
+  - phpunit --configuration phpunit.xml.dist
+
