--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,17 @@
         "codersquad/pennephp": "dev-develop"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4"
+        "phpunit/phpunit": "~4",
+        "phpmd/phpmd": "*",
+        "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
         "psr-4": {
             "Codersquad\\Pestophp\\": [ "src" ],
             "Codersquad\\Pestophp\\Tests\\": [ "tests" ]
         }
+    },
+    "config": {
+        "bin-dir": "bin/"
     }
 }
