--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@ language: php
 
 php:
   - 5.5
+  - 5.6
+  - hhvm
 
 before_script:
-  - composer update
+  - composer install
 
 script:
-  - vendor/bin/phpunit --configuration phpunit.xml.dist
-
+  - ./bin/phpunit -c phpunit.xml.dist
