--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,7 @@ before_script:
 
 script:
   - ./bin/phpunit -c phpunit.xml.dist
+
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.xml
